# containerd-shim-chibiwasm

./: Cargo.toml  Dockerfile  README.md
src/: executor.rs  lib.rs
