[package]
name = "containerd-shim-chibiwasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "containerd-shim-chibiwasm-v1"

[dependencies]
containerd-shim = "0.5.0"
containerd-shim-wasm = "0.2.1"
chibiwasm = { git = "https://github.com/skanehira/chibiwasm" }
