[package]
name = "containerd-shim-chibiwasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "containerd-shim-chibiwasm-v1"

[dependencies]
containerd-shim = "0.4.0"
containerd-shim-wasm = "0.2.1"
chibiwasm = { git = "https://github.com/skanehira/chibiwasm" }
serde = "1.0"
serde_json = "1.0"
nix = "0.26"
libcontainer = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
libc = "0.2.147"
oci-spec = { version = "0.6.1", features = ["runtime"] }
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.7"
